--- a/composer.json
+++ b/composer.json
@@ -26,5 +26,8 @@
     "scripts": {
         "start-server": "docker-compose up -d",
         "stop-server": "docker-compose stop"
+    },
+    "require": {
+        "rebuy/ezpdf": "^0.0.9"
     }
 }
