--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "stop-server": "docker-compose stop"
     },
     "require": {
-        "rebuy/ezpdf": "^0.0.9"
+        "rebuy/ezpdf": "^0.0.9",
+        "ext-mysqli": "*"
     }
 }
