--- a/composer.json
+++ b/composer.json
@@ -30,5 +30,13 @@
     "require": {
         "rebuy/ezpdf": "^0.0.9",
         "ext-mysqli": "*"
+    },
+    "require-dev": {
+        "behat/behat": "^3.5",
+        "behat/mink-extension": "^2.3",
+        "behat/mink-goutte-driver": "^1.2",
+        "behat/mink-selenium2-driver": "^1.3",
+        "bex/behat-screenshot": "^1.2",
+        "emuse/behat-html-formatter": "^0.1.0"
     }
 }
