Added config file

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,11 @@ language: php
 php:
   - '7.3'
 
+env:
+  - MYSQL_USER=troll
+  - MYSQL_PASSWORD=dbpwd
+  - MYSQL_DATABASE=facturini
+
 notifications:
   email:
     recipients:
