--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ php:
   - '7.3'
 
 env:
-  - MYSQL_USER=travis MYSQL_PASSWORD=dbpwd MYSQL_DATABASE=facturini MYSL_HOST=127.0.0.1
+  global:
+    - MYSQL_USER=travis MYSQL_PASSWORD=dbpwd MYSQL_DATABASE=facturini MYSL_HOST=127.0.0.1
 
 notifications:
   email:
