--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ before_install:
   - mysql -e 'CREATE DATABASE facturini'
   - echo "USE mysql;\nUPDATE user SET password=PASSWORD('dbpwd') WHERE user='travis';\nFLUSH PRIVILEGES;\n" | mysql -u root
   - mysql -u root -e "GRANT ALL PRIVILEGES ON facturini.* TO 'travis'@'%';";
-  - mysql -u travis facturini < db/factura.sql
+  - mysql -u travis -pdbpwd facturini < db/factura.sql
 
 install:
   - composer install
