--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ services:
 
 before_install:
   - composer self-update
+  - sudo apt-get install apache2
   - mysql -e 'CREATE DATABASE facturini'
   - echo "USE mysql;\nUPDATE user SET password=PASSWORD('dbpwd') WHERE user='travis';\nFLUSH PRIVILEGES;\n" | mysql -u root
   - mysql -u root -e "GRANT ALL PRIVILEGES ON facturini.* TO 'travis'@'%';";
