--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ services:
 
 before_install:
   - composer self-update
+  - sudo apt-get install apache2
   - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
   - mysql -e 'CREATE DATABASE facturini'
   - echo "USE mysql;\nUPDATE user SET password=PASSWORD('dbpwd') WHERE user='travis';\nFLUSH PRIVILEGES;\n" | mysql -u root
