--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,16 @@
 image: php:7.3
 
+stages:
+  - build
+  - test
+
 services:
   - mysql:5.6
+
+cache:
+  key: ${CI_COMMIT_REF_SLUG}
+  paths:
+    - vendor/
 
 variables:
   MYSQL_DATABASE: "facturini"
@@ -10,15 +19,17 @@ variables:
   MYSQL_USER: "gitlabci"
   MYSQL_PASSWORD: "dbpwd"
 
-before_script:
-  - bash ci/docker_install.sh > /dev/null
-  - curl -sS https://getcomposer.org/installer | php
-  - php composer.phar install
-  - php -S 0.0.0.0:80 -t . &> /dev/null &
-  - echo "SELECT 'OK';" | mysql --user=gitlabci --password="$MYSQL_PASSWORD" --host=mysql "$MYSQL_DATABASE"
-  - mysql -u $MYSQL_USER -p$MYSQL_PASSWORD -e "use $MYSQL_DATABASE"
-  - mysql -u $MYSQL_USER -p$MYSQL_PASSWORD $MYSQL_DATABASE  < db/factura.sql
+build:
+  stage: build
+  script:
+    - apt-get update -yqq
+    - apt-get install git zip -yqq
+    - curl -sS https://getcomposer.org/installer | php
+    - php composer.phar install
 
 test:behat:
+  stage: test
+  before_script:
+    - bash ci/docker_install.sh > /dev/null
   script:
     - vendor/bin/behat --colors
