--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,6 +29,7 @@ test:behat:
     - mysql:5.6
   stage: test
   before_script:
+    - mysql --user="$MYSQL_USER" --password="$MYSQL_PASSWORD" --host=mysql "$MYSQL_DATABASE"
     - bash ci/docker_install.sh > /dev/null
   script:
     - vendor/bin/behat --colors
