--- a/docker/.env.dist
+++ b/docker/.env.dist
@@ -1,7 +1,7 @@
 #MySQL vars
-MYSQL_DRIVER=driver
+#MYSQL_DRIVER=mysql
 MYSQL_ROOT_PASSWORD=root
-MYSQL_DATABASE=db
-MYSQL_USER=user
-MYSQL_PASSWORD=password
-MYSQL_HOST=host
+MYSQL_DATABASE=facturini
+MYSQL_USER=gitlabci
+MYSQL_PASSWORD=dbpwd
+MYSQL_HOST=db
