--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,36 +1,31 @@
-image: php:7.3
-
 stages:
   - build
   - test
+
+services:
+  - docker:dind
 
 cache:
   key: ${CI_COMMIT_REF_SLUG}
   paths:
     - vendor/
 
-variables:
-  MYSQL_DATABASE: "facturini"
-  MYSQL_ROOT_PASSWORD: "dbpwd"
-  MYSQL_HOST: "mysql"
-  MYSQL_USER: "gitlabci"
-  MYSQL_PASSWORD: "dbpwd"
-
 build:
   stage: build
+  image: docker:stable
   script:
-    - apt-get update -yqq
-    - apt-get install git zip -yqq
-    - curl -sS https://getcomposer.org/installer | php
-    - php composer.phar install
+    - docker run --rm -v $(pwd):/app -w /app composer install
 
 test:behat:
-  image: mysql:5.6
-  services:
-    - mysql:5.6
   stage: test
+  image: tiangolo/docker-with-compose
   before_script:
-    - echo "SELECT 'OK';" | mysql --user=root --password="$MYSQL_ROOT_PASSWORD" --host=mysql "$MYSQL_DATABASE"
-    - bash ci/docker_install.sh > /dev/null
+    - docker info
+    - cp docker/.env.dist docker/.env
+    - docker-compose build
+    - docker-compose up -d
+    - sleep 30
+    - docker-compose exec -T db mysql -u gitlabci -pdbpwd -e "CREATE DATABASE IF NOT EXISTS facturini"
+    - docker-compose exec -T db mysql -u gitlabci -pdbpwd facturini < db/factura.sql
   script:
-    - vendor/bin/behat --colors
+    - docker-compose exec -T php-apache vendor/bin/behat --colors
