--- a/docker/.env.dist
+++ b/docker/.env.dist
@@ -1,7 +1,7 @@
 #MySQL vars
 #MYSQL_DRIVER=mysql
-MYSQL_ROOT_PASSWORD=root
-MYSQL_DATABASE=facturini
-MYSQL_USER=gitlabci
-MYSQL_PASSWORD=dbpwd
-MYSQL_HOST=db
+PHINX_MYSQL_ROOT_PASSWORD=root
+PHINX_MYSQL_DATABASE=facturini
+PHINX_MYSQL_USER=gitlabci
+PHINX_MYSQL_PASSWORD=dbpwd
+PHINX_MYSQL_HOST=db
