--- a/docker/.env.dist
+++ b/docker/.env.dist
@@ -4,4 +4,4 @@ PHINX_MYSQL_ROOT_PASSWORD=root
 PHINX_MYSQL_DATABASE=facturini
 PHINX_MYSQL_USER=gitlabci
 PHINX_MYSQL_PASSWORD=dbpwd
-PHINX_MYSQL_HOST=db
+PHINX_MYSQL_HOST=mysql
