--- a/composer.json
+++ b/composer.json
@@ -28,11 +28,13 @@
         "stop-server": "docker-compose stop"
     },
     "require": {
-        "rebuy/ezpdf": "^0.0.9"
+        "rebuy/ezpdf": "^0.0.9",
+        "robmorgan/phinx": "dev-master"
     },
     "require-dev": {
         "behat/behat": "^3.5",
         "behat/mink-extension": "^2.3",
-        "behat/mink-goutte-driver": "^1.2"
+        "behat/mink-goutte-driver": "^1.2",
+        "fzaninotto/faker": "^1.8"
     }
 }
