--- a/docker/.env.dist
+++ b/docker/.env.dist
@@ -5,3 +5,8 @@ MYSQL_DATABASE=facturini
 MYSQL_USER=gitlabci
 MYSQL_PASSWORD=dbpwd
 MYSQL_HOST=db
+
+PHINX_MYSQL_DATABASE=facturini
+PHINX_MYSQL_USER=gitlabci
+PHINX_MYSQL_PASSWORD=dbpwd
+PHINX_MYSQL_HOST=db
